--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ div.cog1,
 div.cog2 {
     display: inline-block;
     float: left;
-    
+
 }
 
 div.cog1 {
@@ -802,6 +802,71 @@ div.section-text--display .dev {
     left: 18%;
 }
 
+.clock {
+  background: url('../img/bg_with_stroke.png') no-repeat;
+  width: 66px;
+  height: 66px;
+  position: absolute;
+  bottom: 29%;
+  right: 46%;
+  background-size: 55px;
+}
+
+.minutes-container, .seconds-container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.minutes-container {
+  width: 55px;
+  height: 55px;
+  animation: rotate 5s infinite linear;
+}
+
+.seconds-container {
+  width: 55px;
+  height: 55px;
+  animation: rotate1 15s infinite linear;
+}
+
+.minutes {
+  background: #db0a5b;
+  height: 40%;
+  left: 47.5%;
+  position: absolute;
+  top: 10%;
+  transform-origin: 50% 100%;
+  width: 8%;
+  border-radius: 100%;
+}
+
+.seconds {
+  background: #db0a5b;
+  height: 37%;
+  left: 47.5%;
+  position: absolute;
+  top: 14%;
+  transform-origin: 50% 80%;
+  width: 8%;
+  z-index: 8;
+  border-radius: 100%;
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
+@keyframes rotate1 {
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
 @media screen and (min-width: 1024px) and (max-height: 768px) {
     .making-text {margin: -12% 0 0 -34%;}
     .talented-text {margin-top: 21%;}
@@ -813,6 +878,7 @@ div.section-text--display .dev {
     .block-take {margin: -6% 0 0 30%;}
     div.section-text--display {margin-left: 35px;}
     .back {margin-top: 6%;}
+    .clock {bottom: 29%; right: 41%;}
 }
 
 @media screen and (min-width: 1280px) {
@@ -825,6 +891,7 @@ div.section-text--display .dev {
     .our-text {margin: -9% 0 0 17%;}
     .block-take {margin: -6% 0 0 30%;}
     .back {margin-top: 6%;}
+    .clock {bottom: 29.5%; right: 45.7%;}
 }
 
 @media screen and (max-width: 1366px) {
@@ -837,6 +904,7 @@ div.section-text--display .dev {
     .our-text {margin: -9% 0 0 17%;}
     .block-take {margin: -6% 0 0 50%;}
     .back {margin-top: 6%;}
+    .clock {bottom: 29.5%; right: 46%;}
 }
 
 @media screen and (min-width: 1440px) {
@@ -879,4 +947,5 @@ div.section-text--display .dev {
     .block-professional {margin: -3% 0 0 27%;}
     .wrap-contact {margin: 5% 0 0 27%}
     div.block-power--margin {margin-top: 11%;}
+    .clock {bottom: 32.5%; right: 46.7%;}
 }
