--- a/css/style.css
+++ b/css/style.css
@@ -146,9 +146,7 @@ section {
     position: relative;
 }
 
-.section-text {
-    text-align: center;
-}
+.section-text {text-align: center;}
 
 .title--big,
 .dev {
@@ -202,7 +200,7 @@ section {
     background: #db0a5b;
     position: absolute;
     top: 50%;
-	right: 0;
+	  right: 0;
     margin-right: -35%;
 }
 
@@ -213,8 +211,8 @@ section {
     line-height: 1.1em;
     text-align: center;
     top: 50%;
-	left: 50%;
-	margin-top: 10%;
+	  left: 50%;
+	  margin-top: 10%;
 }
 
 .speed-text {
@@ -224,8 +222,8 @@ section {
     line-height: 1.1em;
     text-align: center;
     top: 50%;
-	left: 50%;
-	margin-top: 15%;
+	  left: 50%;
+	  margin-top: 15%;
 }
 
 .just-text {
@@ -235,15 +233,15 @@ section {
     line-height: 1.1em;
     text-align: center;
     top: 50%;
-	left: 50%;
-	margin-top: 15%;
+	  left: 50%;
+	  margin-top: 15%;
 }
 
 .block-power {
     text-align: center;
     top: 50%;
-	left: 50%;
-	margin-top: 15%;
+	  left: 50%;
+	  margin-top: 15%;
     height: 100%;
 }
 
@@ -309,9 +307,7 @@ div.cog2 {
     }
 }
 
-.img-pc img {
-    background-size: 340px;
-}
+.img-pc img {background-size: 340px;}
 
 .vert-line {
     width: 3px;
@@ -345,9 +341,7 @@ div.cog2 {
     margin: -8% 0 0 15%;
 }
 
-.focus-text--small {
-    font-size: 70px;
-}
+.focus-text--small {font-size: 70px;}
 
 .left-lamp {
     background: url('../img/lamp-left.png') no-repeat;
@@ -492,9 +486,7 @@ div.section-text--display .title--big {
     padding-bottom: 0;
 }
 
-div.section-text--display .dev {
-    font-size: 40px;
-}
+div.section-text--display .dev {font-size: 40px;}
 
 .wrap-contact {
     position: absolute;
@@ -564,9 +556,7 @@ div.section-text--display .dev {
 .obj11,
 .obj12,
 .obj13,
-.obj14 {
-    position: absolute;
-}
+.obj14 {position: absolute;}
 
 .obj1 {
     top: 5%;
@@ -803,56 +793,56 @@ div.section-text--display .dev {
 }
 
 .clock {
-  background: url('../img/bg_with_stroke.png') no-repeat;
-  width: 66px;
-  height: 66px;
-  position: absolute;
-  bottom: 29%;
-  right: 46%;
-  background-size: 55px;
+    background: url('../img/bg_with_stroke.png') no-repeat;
+    width: 66px;
+    height: 66px;
+    position: absolute;
+    bottom: 29%;
+    right: 46%;
+    background-size: 55px;
 }
 
 .minutes-container, .seconds-container {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .minutes-container {
-  width: 55px;
-  height: 55px;
-  animation: rotate 5s infinite linear;
+    width: 55px;
+    height: 55px;
+    animation: rotate 5s infinite linear;
 }
 
 .seconds-container {
-  width: 55px;
-  height: 55px;
-  animation: rotate1 15s infinite linear;
+    width: 55px;
+    height: 55px;
+    animation: rotate1 15s infinite linear;
 }
 
 .minutes {
-  background: #db0a5b;
-  height: 40%;
-  left: 47.5%;
-  position: absolute;
-  top: 10%;
-  transform-origin: 50% 100%;
-  width: 8%;
-  border-radius: 100%;
+    background: #db0a5b;
+    height: 40%;
+    left: 47.5%;
+    position: absolute;
+    top: 10%;
+    transform-origin: 50% 100%;
+    width: 8%;
+    border-radius: 100%;
 }
 
 .seconds {
-  background: #db0a5b;
-  height: 37%;
-  left: 47.5%;
-  position: absolute;
-  top: 14%;
-  transform-origin: 50% 80%;
-  width: 8%;
-  z-index: 8;
-  border-radius: 100%;
+    background: #db0a5b;
+    height: 37%;
+    left: 47.5%;
+    position: absolute;
+    top: 14%;
+    transform-origin: 50% 80%;
+    width: 8%;
+    z-index: 8;
+    border-radius: 100%;
 }
 
 @keyframes rotate {
@@ -866,6 +856,8 @@ div.section-text--display .dev {
     transform: rotateZ(360deg);
   }
 }
+
+/*media-queries*/
 
 @media screen and (min-width: 1024px) and (max-height: 768px) {
     .making-text {margin: -12% 0 0 -34%;}
@@ -949,3 +941,5 @@ div.section-text--display .dev {
     div.block-power--margin {margin-top: 11%;}
     .clock {bottom: 32.5%; right: 46.7%;}
 }
+
+/*-----------*/
