--- a/css/style.css
+++ b/css/style.css
@@ -189,8 +189,13 @@ section {
     line-height: 90px;
     text-align: center;
     position: absolute;
-	left: 50%;
-	margin: -12% 0 0 -25%;
+    top: 0;
+	  left: 0;
+    right: 0;
+    bottom: 0;
+	  margin: auto;
+    width: 100%;
+    height: 30%;
 }
 
 .vertical-line {
@@ -797,7 +802,7 @@ div.section-text--display .dev {font-size: 40px;}
     height: 66px;
     position: absolute;
     bottom: 30%;
-    right: 46.6%;
+    right: 45.3%;
     background-size: 55px;
 }
 
@@ -859,7 +864,7 @@ div.section-text--display .dev {font-size: 40px;}
 /*media-queries*/
 
 @media screen and (min-width: 1024px) and (max-height: 768px) {
-    .making-text {margin: -12% 0 0 -34%;}
+    /*.making-text {margin: -12% 0 0 -34%;}*/
     .talented-text {margin-top: 21%;}
     .speed-text {margin-top: 27%;}
     .just-text {margin-top: 27%;}
@@ -873,7 +878,7 @@ div.section-text--display .dev {font-size: 40px;}
 }
 
 @media screen and (min-width: 1280px) {
-    .making-text {margin: -12% 0 0 -25%;}
+    /*.making-text {margin: -12% 0 0 -25%;}*/
     .talented-text {margin-top: 21%;}
     .speed-text {margin-top: 27%;}
     .just-text {margin-top: 27%;}
@@ -886,7 +891,7 @@ div.section-text--display .dev {font-size: 40px;}
 }
 
 @media screen and (max-width: 1366px) {
-    .making-text {margin: -12% 0 0 -25%;}
+    /*.making-text {margin: -12% 0 0 -25%;}*/
     .talented-text {margin-top: 11%;}
     .speed-text {margin-top: 17%;}
     .just-text {margin-top: 17%;}
@@ -899,7 +904,7 @@ div.section-text--display .dev {font-size: 40px;}
 }
 
 @media screen and (min-width: 1440px) {
-    .making-text {margin: -12% 0 0 -25%;}
+    /*.making-text {margin: -12% 0 0 -25%;}*/
     .talented-text {margin-top: 15%;}
     .speed-text {margin-top: 20%;}
     .just-text {margin-top: 20%;}
@@ -912,7 +917,7 @@ div.section-text--display .dev {font-size: 40px;}
 }
 
 @media screen and (min-width: 1600px) {
-    .making-text {margin: -12% 0 0 -25%;}
+    /*.making-text {margin: -12% 0 0 -25%;}*/
     .talented-text {margin-top: 15%;}
     .speed-text {margin-top: 20%;}
     .just-text {margin-top: 20%;}
@@ -927,7 +932,7 @@ div.section-text--display .dev {font-size: 40px;}
 }
 
 @media screen and (min-width: 1920px) {
-    .making-text {margin: -12% 0 0 -20%;}
+    /*.making-text {margin: -12% 0 0 -20%;}*/
     .focus-text {margin: -8% 0 0 29%;}
     .talented-text {margin-top: 15%;}
     .speed-text {margin-top: 20%;}
