--- a/css/style.css
+++ b/css/style.css
@@ -214,9 +214,14 @@ section {
     font-weight: 700;
     line-height: 1.1em;
     text-align: center;
-    top: 50%;
-	  left: 50%;
-	  margin-top: 10%;
+    position: absolute;
+    top: 0;
+	  left: 0;
+    right: 0;
+    bottom: 0;
+	  margin: auto;
+    width: 100%;
+    height: 55%;
 }
 
 .speed-text {
@@ -225,9 +230,14 @@ section {
     color: #b5ffe1;
     line-height: 1.1em;
     text-align: center;
-    top: 50%;
-	  left: 50%;
-	  margin-top: 15%;
+    position: absolute;
+    top: 0;
+	  left: 0;
+    right: 0;
+    bottom: 0;
+	  margin: auto;
+    width: 100%;
+    height: 34%;
 }
 
 .just-text {
@@ -236,17 +246,26 @@ section {
     font-weight: 700;
     line-height: 1.1em;
     text-align: center;
-    top: 50%;
-	  left: 50%;
-	  margin-top: 15%;
+    position: absolute;
+    top: 0;
+	  left: 0;
+    right: 0;
+    bottom: 0;
+	  margin: auto;
+    width: 100%;
+    height: 34%;
 }
 
 .block-power {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    width: 100%;
+    height: 50%;
     text-align: center;
-    top: 50%;
-	  left: 50%;
-	  margin-top: 15%;
-    height: 100%;
 }
 
 .img-pc {
@@ -341,8 +360,13 @@ div.cog2 {
     line-height: 0.8em;
     text-align: center;
     position: absolute;
-    top: 50%;
-    margin: -8% 0 0 15%;
+    top: 0;
+	  left: 0;
+    right: 0;
+    bottom: 0;
+	  margin: auto;
+    width: 100%;
+    height: 33%;
 }
 
 .focus-text--small {font-size: 70px;}
@@ -376,9 +400,15 @@ div.power-text--color {color: #8bffdf;}
     font-size: 70px;
     font-weight: 700;
     position: absolute;
-    top: 50%;
-    margin: -3% 0 0 15%;
+    top: 0;
+	  left: 0;
+    right: 0;
+    bottom: 0;
+	  margin: auto;
+    width: 100%;
+    height: 10%;
     z-index: 100;
+    text-align: center;
 }
 
 .our-text {
@@ -387,8 +417,13 @@ div.power-text--color {color: #8bffdf;}
     font-size: 70px;
     font-weight: 700;
     position: absolute;
-    top: 50%;
-    margin: -5% 0 0 30%;
+    top: 0;
+	  left: 0;
+    right: 0;
+    bottom: 0;
+	  margin: auto;
+    width: 100%;
+    height: 31%;
 }
 
 .block-take {
@@ -865,12 +900,12 @@ div.section-text--display .dev {font-size: 40px;}
 
 @media screen and (min-width: 1024px) and (max-height: 768px) {
     /*.making-text {margin: -12% 0 0 -34%;}*/
-    .talented-text {margin-top: 21%;}
-    .speed-text {margin-top: 27%;}
-    .just-text {margin-top: 27%;}
-    .block-power {margin-top: 25%;}
+    /*.talented-text {margin-top: 21%;}*/
+    /*.speed-text {margin-top: 27%;}*/
+     /*{margin-top: 27%;}*/
+    /*.block-power {margin-top: 25%;}*/
     .right-lamp {right: -24px;}
-    .our-text {margin: -9% 0 0 8%;}
+    /*.our-text {margin: -9% 0 0 8%;}*/
     .block-take {margin: -6% 0 0 30%;}
     div.section-text--display {margin-left: 35px;}
     .back {margin-top: 6%;}
@@ -879,12 +914,12 @@ div.section-text--display .dev {font-size: 40px;}
 
 @media screen and (min-width: 1280px) {
     /*.making-text {margin: -12% 0 0 -25%;}*/
-    .talented-text {margin-top: 21%;}
-    .speed-text {margin-top: 27%;}
-    .just-text {margin-top: 27%;}
-    .block-power {margin-top: 25%;}
+    /*.talented-text {margin-top: 21%;}*/
+    /*.speed-text {margin-top: 27%;}*/
+    /*.just-text {margin-top: 27%;}*/
+    /*.block-power {margin-top: 25%;}*/
     .right-lamp {right: 135px;}
-    .our-text {margin: -9% 0 0 17%;}
+    /*.our-text {margin: -9% 0 0 17%;}*/
     .block-take {margin: -6% 0 0 30%;}
     .back {margin-top: 6%;}
     .clock {bottom: 29.7%; right: 45.6%;}
@@ -892,12 +927,12 @@ div.section-text--display .dev {font-size: 40px;}
 
 @media screen and (max-width: 1366px) {
     /*.making-text {margin: -12% 0 0 -25%;}*/
-    .talented-text {margin-top: 11%;}
-    .speed-text {margin-top: 17%;}
-    .just-text {margin-top: 17%;}
-    .block-power {margin-top: 15%;}
+    /*.talented-text {margin-top: 11%;}*/
+    /*.speed-text {margin-top: 17%;}*/
+    /*.just-text {margin-top: 17%;}*/
+    /*.block-power {margin-top: 15%;}*/
     .right-lamp {right: 138px;}
-    .our-text {margin: -9% 0 0 17%;}
+    /*.our-text {margin: -9% 0 0 17%;}*/
     .block-take {margin: -6% 0 0 50%;}
     .back {margin-top: 6%;}
     .clock {bottom: 29.7%; right: 45.9%;}
@@ -905,12 +940,12 @@ div.section-text--display .dev {font-size: 40px;}
 
 @media screen and (min-width: 1440px) {
     /*.making-text {margin: -12% 0 0 -25%;}*/
-    .talented-text {margin-top: 15%;}
-    .speed-text {margin-top: 20%;}
-    .just-text {margin-top: 20%;}
-    .block-power {margin-top: 20%;}
+    /*.talented-text {margin-top: 15%;}*/
+    /*.speed-text {margin-top: 20%;}*/
+    /*.just-text {margin-top: 20%;}*/
+    /*.block-power {margin-top: 20%;}*/
     .right-lamp {right: 135px;}
-    .our-text {margin: -9% 0 0 17%;}
+    /*.our-text {margin: -9% 0 0 17%;}*/
     .block-take {margin: -6% 0 0 30%;}
     .back {margin-top: 6%;}
     .clock {bottom: 31.7%; right: 45.9%;}
@@ -918,31 +953,31 @@ div.section-text--display .dev {font-size: 40px;}
 
 @media screen and (min-width: 1600px) {
     /*.making-text {margin: -12% 0 0 -25%;}*/
-    .talented-text {margin-top: 15%;}
-    .speed-text {margin-top: 20%;}
-    .just-text {margin-top: 20%;}
-    .block-power {margin-top: 16%;}
+    /*.talented-text {margin-top: 15%;}*/
+    /*.speed-text {margin-top: 20%;}*/
+    /*.just-text {margin-top: 20%;}*/
+    /*.block-power {margin-top: 16%;}*/
     .right-lamp {right: 164px;}
-    .our-text {margin: -9% 0 0 25%;}
+    /*.our-text {margin: -9% 0 0 25%;}*/
     .block-take {margin: -6% 0 0 50%;}
     .back {margin-top: 6%;}
-    .block-professional {margin: -3% 0 0 24%;}
+    /*.block-professional {margin: -3% 0 0 24%;}*/
     .focus-text {margin: -8% 0 0 22%;}
     .clock {bottom: 32.5%; right: 46.4%;}
 }
 
 @media screen and (min-width: 1920px) {
     /*.making-text {margin: -12% 0 0 -20%;}*/
-    .focus-text {margin: -8% 0 0 29%;}
-    .talented-text {margin-top: 15%;}
-    .speed-text {margin-top: 20%;}
-    .just-text {margin-top: 20%;}
-    .block-power {margin-top: 16%;}
+    /*.focus-text {margin: -8% 0 0 29%;}*/
+    /*.talented-text {margin-top: 15%;}*/
+    /*.speed-text {margin-top: 20%;}*/
+    /*.just-text {margin-top: 20%;}*/
+    /*.block-power {margin-top: 16%;}*/
     .right-lamp {right: 236px;}
-    .our-text {margin: -5% 0 0 30%;}
+    /*.our-text {margin: -5% 0 0 30%;}*/
     .block-take {margin: -3% 0 0 50%;}
     .back {margin-top: 6%;}
-    .block-professional {margin: -3% 0 0 27%;}
+    /*.block-professional {margin: -3% 0 0 27%;}*/
     .wrap-contact {margin: 5% 0 0 27%}
     div.block-power--margin {margin-top: 11%;}
     .clock {bottom: 32.5%; right: 46.7%;}
