--- a/css/style.css
+++ b/css/style.css
@@ -962,7 +962,7 @@ div.section-text--display .dev {font-size: 40px;}
     .block-take {margin: -6% 0 0 50%;}
     .back {margin-top: 6%;}
     /*.block-professional {margin: -3% 0 0 24%;}*/
-    .focus-text {margin: -8% 0 0 22%;}
+    /*.focus-text {margin: -8% 0 0 22%;}*/
     .clock {bottom: 32.5%; right: 46.4%;}
 }
 
