--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ section {
 .horizon-next { right: 20px; }
 
 .section-section1 {
-    background: url('../img/slide1.jpg') no-repeat center bottom;
+    background: url('../img/slide1.png') no-repeat center bottom;
     width: 100%;
     height: 100%;
     background-size: cover;
