--- a/css/style.css
+++ b/css/style.css
@@ -387,7 +387,7 @@ div.cog2 {
     height: 780px;
     position: absolute;
     top: 17px;
-    right: 214px;
+    right: 0px;
     background-size: 500px;
 }
 
@@ -922,7 +922,7 @@ div.section-text--display .dev {font-size: 40px;}
     /*.speed-text {margin-top: 27%;}*/
      /*{margin-top: 27%;}*/
     /*.block-power {margin-top: 25%;}*/
-    .right-lamp {right: 23px;}
+    /*.right-lamp {right: 23px;}*/
     /*.our-text {margin: -9% 0 0 8%;}*/
     /*.block-take {margin: -6% 0 0 30%;}*/
     div.section-text--display {margin-left: 35px;}
@@ -936,7 +936,7 @@ div.section-text--display .dev {font-size: 40px;}
     /*.speed-text {margin-top: 27%;}*/
     /*.just-text {margin-top: 27%;}*/
     /*.block-power {margin-top: 25%;}*/
-    .right-lamp {right: 131px;}
+    /*.right-lamp {right: 131px;}*/
     /*.our-text {margin: -9% 0 0 17%;}*/
     /*.block-take {margin: -6% 0 0 30%;}*/
     .back {margin-top: 6%;}
@@ -949,7 +949,7 @@ div.section-text--display .dev {font-size: 40px;}
     /*.speed-text {margin-top: 17%;}*/
     /*.just-text {margin-top: 17%;}*/
     /*.block-power {margin-top: 15%;}*/
-    .right-lamp {right: 128px;}
+    /*.right-lamp {right: 128px;}*/
     /*.our-text {margin: -9% 0 0 17%;}*/
     /*.block-take {margin: -6% 0 0 50%;}*/
     .back {margin-top: 6%;}
@@ -962,7 +962,7 @@ div.section-text--display .dev {font-size: 40px;}
     /*.speed-text {margin-top: 20%;}*/
     /*.just-text {margin-top: 20%;}*/
     /*.block-power {margin-top: 20%;}*/
-    .right-lamp {right: 74px;}
+    /*.right-lamp {right: 74px;}*/
     /*.our-text {margin: -9% 0 0 17%;}*/
     /*.block-take {margin: -6% 0 0 30%;}*/
     .back {margin-top: 6%;}
@@ -975,7 +975,7 @@ div.section-text--display .dev {font-size: 40px;}
     /*.speed-text {margin-top: 20%;}*/
     /*.just-text {margin-top: 20%;}*/
     /*.block-power {margin-top: 16%;}*/
-    .right-lamp {right: 153px;}
+    /*.right-lamp {right: 153px;}*/
     /*.our-text {margin: -9% 0 0 25%;}*/
     /*.block-take {margin: -6% 0 0 50%;}*/
     .back {margin-top: 6%;}
@@ -991,7 +991,7 @@ div.section-text--display .dev {font-size: 40px;}
     /*.speed-text {margin-top: 20%;}*/
     /*.just-text {margin-top: 20%;}*/
     /*.block-power {margin-top: 16%;}*/
-    .right-lamp {right: 106px;}
+    /*.right-lamp {right: 106px;}*/
     /*.our-text {margin: -5% 0 0 30%;}*/
     /*.block-take {margin: -3% 0 0 50%;}*/
     .back {margin-top: 6%;}
